src/styles/index.css
html {
  overflow: hidden;
}

body {
  font-family: 'Roboto Slab', sans-serif !important;
  background-color: antiquewhite;
  /*background-image: url("https://www.transparenttextures.com/patterns/gplay.png");*/
  background-image: url("https://www.transparenttextures.com/patterns/food.png");
  -webkit-font-smoothing: antialiased;
  color: rgba(131, 177, 195, 0.87);
  overflow: hidden;
}

.container {
  height: 100vh;
}

.playAs {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.container * {
  color: rgba(165, 73, 20, 0.88);
}

.mainButton, .mainButtonCopy {
  background-color: #3172ee;
  position: absolute;
  color: white;
  padding: 0.5em;
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
  border-radius: 2px;
  text-transform: uppercase;
  font-size: 0.875rem;
  padding: 6px 14px;
  margin: 5px;
  cursor: pointer;
  -webkit-text-stroke-width: medium;
  -webkit-font-smoothing: antialiased;
}

.movable {
  cursor: move !important;
}

.playAs {
  text-align: center;
}

.playAsTitle {
  margin-bottom: 0;
  position: absolute;
  top: 0;
  transform: translateY(-90px);
  width: 100%;
  -webkit-text-stroke-width: thin;
}

.player {
  margin: 3em 0 3em 0;
}

.player .playerImgWrapper.selectionComplete {
  animation: comeInTop;
  animation-duration: 0.5s;
  animation-timing-function: ease-in-out;
}

.player.selectable {
  margin: 0;
  cursor: pointer;
  animation: comeInLeft;
  animation-duration: 1.5s;
  transition: all 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
}

.connected {
  background: #4db741 !important;
}

.waiting {
  background: #8a8988 !important;
}

.mainButton.shrink {
  animation: shrink;
  animation-duration: 1s;
  transform: scale(0.2);
}

@keyframes shrink {
  0% {
    transform: scale(1);
  }
  100% {
    transform: scale(0.2);
  }
}

@keyframes comeInLeft {
 0% {
   left: -2000px;
   border-color: transparent;
 }
  50% {
    left: 15%;
    border-color: transparent;
  }
  75% {
    border-color: rgba(0, 0, 0, 0.25);
  }
  100% {
    left: 0%;
    border-color: rgba(0, 0, 0, 0.5);
  }
}

@keyframes comeInTop {
  0% {
    transform: translateY(500px);
    opacity: 0;
  }
  100% {
    transform: translateY(0%);
    opacity: 1;
  }
}


.player.selectable .playerImgWrapper {
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
  background: rgba(255, 183, 52, 0.85);
  max-width: 135px;
}

.playerImgWrapper {
  margin: auto;
  border-radius: 2px;
  background: #4c4c4c;
  transition: all 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000);
}

.player.selectable .playerImg {
  max-height: 75px;
  max-width: none;
  margin: 1em;
}

.playerImg {
  max-width: 40px;
}

.playerTitle {
  display: none;
  margin-bottom: 0px;
  background: #4c4c4c;
  padding: 0.25em;
  border-radius: 2px 2px 0 0;
  border-bottom: 1px solid #ffffff;
  color: white;
  margin-top: 40px;
}

.player.selectable .playerTitle, .player.selectable .playerDesc {
  display: block;
}

.playerDesc {
  display: none;
  padding: 1em;
  margin: 0;
  font-style: italic;
  color: #696969;
}

@media only screen and (max-width: 730px) {
  .player.selectable:nth-child(2) {
    border-top: 1px solid #696969;
    margin-top: 2em;
  }
}

@media only screen and (min-width: 731px) {
  .player.selectable:nth-child(2) {
    border-left: 1px solid #696969;
  }
}

.connectedLabel {
  -webkit-text-stroke-color: white;
  -webkit-text-stroke-width: thin;
  font-weight: 900;
  margin-left: 1em;
}

.toolbar {
  width: 100%;
  position: absolute;
  right: 0px;
  bottom: 50px;
  /*height: 100vh;*/
  z-index: 99;
}

#catVideo {
  position: absolute;
  left: 0;
  top: 0;
}

.antagonistButton {
  margin-top: 0.5em;
  background: white;
  padding: 0.25em;
  border-radius: 2px;
  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px;
  cursor: pointer;
  width: 50%;
  display: inline-block;
  text-align: center;
}

.antagonistButton.active {
  background: #ff7e4d;
  color: white;
}

.gameResultWrapper {
  text-align: center;
}

.gameResult {
  max-width: 100%;
  max-height: 205px;
  border-radius: 2px;
  margin-bottom: 2em;
}

.gameResult.lost {
  box-shadow: 1px 2px 3px #eee;
}

.countDownWrapper {
  position: absolute;
  right: 5px;
  bottom: 5px;
}

.countDown {
  margin: 0;
}

.dialogDesc {
  -webkit-text-stroke-width: thin;
}

.clickerView {
  height: 100vh;
  width: 100vw;
}

.clickIndicator {
  position: absolute;
  display: none;
  z-index: 99999;
}

/* Credit to https://codepen.io/riccardoscalco/pen/GZzZRz */
circle {
  stroke: #ff313e;
  stroke-width: 4px;
  stroke-opacity: 1;
}

.pulse {
  fill: #771b1b;
  fill-opacity: 0;
  transform-origin: 50% 50%;
  animation-duration: 0.75s;
  animation-name: pulse;
  animation-iteration-count: infinite;
}

@keyframes pulse {
  from {
    stroke-width: 3px;
    stroke-opacity: 1;
    transform: scale(0.3);
  }
  to {
    stroke-width: 0;
    stroke-opacity: 0;
    transform: scale(2);
  }
}

.fullSize {
  height: 100vh;
  width: 100vw;
}

.atTop {
  position: absolute;
  top: 0;
  left: 0;
}

.ad {
  max-width: 180px;
  z-index: 3;
  cursor: pointer;
  position: relative;
  animation-duration: 1.3s;
  animation-name: ad;
  animation-iteration-count: infinite;
}

.ieError.new {
  animation-name: error;
  animation-duration: 2s;
}

@keyframes error {
  0% {
    /*left: -1000px;*/
    transform: scale(0.1);
  }
  100% {
    /*left: inherit;*/
    transform: scale(1);
  }
}

@keyframes ad {
  0% {
    transform: translateX(10px);
    transform: translateY(-10px);
    transform: scale(0.8);
  }
  50% {
    transform: translateX(-40px);
    transform: translateY(30px);
    transform: scale(1.5);
  }
  100% {
    transform: translateX(10px);
    transform: translateY(-10px);
    transform: scale(0.8);
  }
}

.BSOD {
  background-color: blue;
  text-align: center;
  vertical-align: middle;
}

.threeSecBug {
  background: #ff313e;
  width: 100%;
  position: absolute;
  right: 0px;
  bottom: 50px;
  height: 100px;
  color: white;
  z-index: 100;
  font-family: monospace;
  text-align: center;
  border: 2px dashed white;
}

.threeSecBug h2 {
  color: white;
  margin-top: 1.5em;
}

.deployBug {
  position: absolute;
  bottom: 10px;
}

#catVideoClose {
  background: #a5a5a5;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  position: absolute;
  top: 0px;
  right: 10px;
  font-size: 22px;
  color: white;
  -webkit-text-stroke-width: medium;
}

